refactor(crud): renaming some components
