# crud/go/gen/oas_validators_gen.go
@@ -10,24 +10,6 @@ import (
 	"github.com/ogen-go/ogen/validate"
 )
 
-func (s *EntitiesResponse) Validate() error {
-	var failures []validate.FieldError
-	if err := func() error {
-		if s.Items == nil {
-			return errors.New("nil is invalid value")
-		}
-		return nil
-	}(); err != nil {
-		failures = append(failures, validate.FieldError{
-			Name:  "items",
-			Error: err,
-		})
-	}
-	if len(failures) > 0 {
-		return &validate.Error{Fields: failures}
-	}
-	return nil
-}
 func (s *EntityMapping) Validate() error {
 	var failures []validate.FieldError
 	if err := func() error {
@@ -92,4 +74,22 @@ func (s EntityMappingFieldsItemDatatype) Validate() error {
 	default:
 		return errors.Errorf("invalid value: %v", s)
 	}
+}
+func (s *RecordsResponse) Validate() error {
+	var failures []validate.FieldError
+	if err := func() error {
+		if s.Items == nil {
+			return errors.New("nil is invalid value")
+		}
+		return nil
+	}(); err != nil {
+		failures = append(failures, validate.FieldError{
+			Name:  "items",
+			Error: err,
+		})
+	}
+	if len(failures) > 0 {
+		return &validate.Error{Fields: failures}
+	}
+	return nil
 }
